# JpegRTSP

./: .clang-format  CMakeLists.txt  GstJpegParser.h  JPEGDeviceSource.cpp  JPEGDeviceSource.hh  JPEGFramedSource.cpp  JPEGFramedSource.hh  JPEGParser.cpp  JPEGParser.h  JPEGUnicastSubsession.cpp  JPEGUnicastSubsession.h  JpegFrameParser.cpp  JpegFrameParser.hh  README.md  main.cpp
